<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity.AboutActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_20sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:src="@drawable/nss_x1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/company_name_english"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/support" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contact_number_nss"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sale_email"
                android:textColor="#E09C3D"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/website" />

            <TextView
                android:id="@+id/web_site"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nss_website"
                android:textColor="#4C6EBA"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/address" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nss_address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>