<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <WebView
            android:id="@+id/web_view_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"></WebView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/parent_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <!--  android:layout_centerInParent="true"-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1.5"></LinearLayout>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/version_of_app"
                                android:textColor="#ffffff"
                                android:textSize="14dp"
                                android:textStyle="italic" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:id="@+id/neo_egov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Neo"
                    android:textColor="#FF4F4E"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EGOV"
                    android:textColor="#1698FF"
                    android:textSize="35dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giải pháp Chính quyền điện tử nguồn mở"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/error_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/warning_x1"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:text="@string/confirm_login_error"
                    android:textColor="#FF8E71"
                    android:textSize="@dimen/_11sdp"
                    android:visibility="invisible" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/border_blue_cornor"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp">

                        <Spinner
                            android:id="@+id/before_local"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background_spinner_login"
                            android:paddingRight="12dp"
                            android:singleLine="true"
                            android:spinnerMode="dropdown"
                            android:textSize="12dp" />
                    </LinearLayout>
                    <!--android:drawableLeft="@drawable/server1"-->
                    <!--<View-->
                    <!--android:layout_width="10dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="#00388D" />-->

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#b9b9b4" />


                    <AutoCompleteTextView
                        android:id="@+id/link"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawablePadding="3dp"
                        android:hint="@string/server_address"
                        android:imeOptions="actionDone|flagNoExtractUi"
                        android:paddingLeft="17dp"
                        android:singleLine="true"
                        android:textSize="15dp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ip_text_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Tên truy cập"
                        android:paddingBottom="5dp"
                        android:textColorHint="@color/hint"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">


                        <EditText
                            android:id="@+id/user"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/background_edittext_user"
                            android:drawableLeft="@drawable/login_user_icon"
                            android:drawablePadding="6dp"
                            android:hint="@string/user_hint"
                            android:imeOptions="actionDone|flagNoExtractUi"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textSize="15dp" />

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5sp"
                        android:background="#b9b9b4" />


                </LinearLayout>


                <!--   <EditText
                       android:id="@+id/user"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="8"
                       android:background="@drawable/background_edittext_user"
                       android:drawableLeft="@drawable/login_user_icon"
                       android:drawablePadding="6dp"
                       android:hint="@string/user_hint"
                       android:imeOptions="actionDone|flagNoExtractUi"
                       android:paddingLeft="10dp"
                       android:singleLine="true"
                       android:textSize="15dp" />-->


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:background="@drawable/background_edittext_user"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/ip_text_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="Mật khẩu"
                            android:paddingBottom="5dp"
                            android:textColorHint="@color/hint"
                            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                            <EditText
                                android:id="@+id/pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/background_edittext_user"
                                android:drawableLeft="@drawable/login_pass_icon"
                                android:drawablePadding="6dp"
                                android:hint="@string/pass_hint"
                                android:imeOptions="actionDone|flagNoExtractUi"
                                android:paddingLeft="10dp"
                                android:singleLine="true"
                                android:textSize="15dp" />
                        </android.support.design.widget.TextInputLayout>

                        <!--<View-->
                        <!--android:layout_width="1dp"-->
                        <!--android:layout_height="match_parent" />-->

                        <TextView
                            android:id="@+id/login_eye_button"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/eyes_button_layer_list_orange" />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#b9b9b4" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/conor_button_orange"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#fafaf8"
                    android:textSize="20dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|right"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="Hỗ trợ" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/baseline_help_outline_24" />
                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:text="@string/forget_pass"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"></LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_gravity="center"-->
            <!--android:orientation="vertical"-->
            <!--android:id="@+id/textabout"-->
            <!--android:layout_weight="0.3"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp">-->
            <TextView
                android:id="@+id/link_to_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/product_name"
                android:textColor="#847878"
                android:textSize="13dp" />
        </LinearLayout>
        <!--</LinearLayout>-->
    </LinearLayout>

</RelativeLayout>
